--- a/internal/public/index.html
+++ b/internal/public/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>External Chat App</title>
+  <title>Internal Chat App</title>
   <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
   <div class="ribbon">
-    <span>External</span>
+    <span>Internal</span>
   </div>
   <div class="container">
     <div class="chat-container">
