--- a/internal/public/index.html
+++ b/internal/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internal Chat App</title>
   <link rel="stylesheet" href="index.css">
+  <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
 </head>
 
 <body>
